<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recuperar_cuenta">

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="891dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-3dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_recuperar"
            android:textAlignment="center"
            android:textColor="@color/sena"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="323dp"
            app:srcCompat="@drawable/sena" />

        <EditText
            android:id="@+id/editTextText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="15sp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/txt_correo" />

        <Button
            android:id="@+id/button2"
            android:layout_width="170sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp"
            android:backgroundTint="#0037C1"
            android:text="@string/btn_recupass"
            android:textColorLink="@color/sena" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>